[gd_scene load_steps=6 format=2]

[ext_resource path="res://Boss3.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Boss/Level 3.png" type="Texture" id=2]
[ext_resource path="res://hpBarUnder.png" type="Texture" id=3]
[ext_resource path="res://hpBarTop.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Boss/Level 3(2).png" type="Texture" id=5]

[node name="Boss" type="Area2D"]
scale = Vector2( 0.5, 1 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 375.6, 74.15, 389.6, 81.9, 372.1, 91.9, 373.6, 110.9, 371.6, 126.65, 331.6, 163.15, 486.6, 162.15, 502.6, 162.15, 458.1, 143.65, 420.1, 118.15, 410.1, 98.4, 421.1, 87.15, 420.6, 72.65, 411.6, 72.65, 405.6, 62.65 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Bullets" type="Node" parent="."]

[node name="UI" type="Control" parent="."]
visible = false
margin_right = 483.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="TextureProgress" parent="UI"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 25.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" type="Node2D" parent="."]
scale = Vector2( 2, 1 )

[node name="Sprite" type="Sprite" parent="Node"]
position = Vector2( 150, 50 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3

[node name="Sprite2" type="Sprite" parent="Node"]
position = Vector2( 182, 50 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 1

[node name="Sprite3" type="Sprite" parent="Node"]
position = Vector2( 214, 50 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 2

[node name="Sprite4" type="Sprite" parent="Node"]
position = Vector2( 182, 82 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 3

[node name="Sprite5" type="Sprite" parent="Node"]
position = Vector2( 214, 82 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 4

[node name="Sprite6" type="Sprite" parent="Node"]
position = Vector2( 182, 114 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 5

[node name="Sprite7" type="Sprite" parent="Node"]
position = Vector2( 214, 114 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 6

[node name="Sprite8" type="Sprite" parent="Node"]
position = Vector2( 182, 146 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 7

[node name="Sprite9" type="Sprite" parent="Node"]
position = Vector2( 214, 145.75 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 8

[node name="Sprite10" type="Sprite" parent="Node"]
position = Vector2( 246, 146 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 9

[node name="Node2" type="Node2D" parent="."]
visible = false
scale = Vector2( 2, 1 )

[node name="Sprite" type="Sprite" parent="Node2"]
position = Vector2( 206, 52 )
texture = ExtResource( 5 )
vframes = 4
hframes = 3

[node name="Sprite2" type="Sprite" parent="Node2"]
position = Vector2( 145, 84 )
texture = ExtResource( 5 )
vframes = 4
hframes = 3
frame = 1

[node name="Sprite3" type="Sprite" parent="Node2"]
position = Vector2( 177, 84 )
texture = ExtResource( 5 )
vframes = 4
hframes = 3
frame = 2

[node name="Sprite4" type="Sprite" parent="Node2"]
position = Vector2( 206.063, 84 )
texture = ExtResource( 5 )
vframes = 4
hframes = 3
frame = 3

[node name="Sprite5" type="Sprite" parent="Node2"]
position = Vector2( 145.5, 116 )
texture = ExtResource( 5 )
vframes = 4
hframes = 3
frame = 4

[node name="Sprite6" type="Sprite" parent="Node2"]
position = Vector2( 177, 116 )
texture = ExtResource( 5 )
vframes = 4
hframes = 3
frame = 5

[node name="Sprite7" type="Sprite" parent="Node2"]
position = Vector2( 206, 116 )
texture = ExtResource( 5 )
vframes = 4
hframes = 3
frame = 6

[node name="Sprite8" type="Sprite" parent="Node2"]
position = Vector2( 237.25, 116 )
texture = ExtResource( 5 )
vframes = 4
hframes = 3
frame = 7

[node name="Sprite9" type="Sprite" parent="Node2"]
position = Vector2( 146, 148 )
texture = ExtResource( 5 )
vframes = 4
hframes = 3
frame = 8

[node name="Sprite10" type="Sprite" parent="Node2"]
position = Vector2( 177, 148 )
texture = ExtResource( 5 )
vframes = 4
hframes = 3
frame = 9

[node name="Sprite11" type="Sprite" parent="Node2"]
position = Vector2( 206.25, 148 )
texture = ExtResource( 5 )
vframes = 4
hframes = 3
frame = 10

[node name="Sprite12" type="Sprite" parent="Node2"]
position = Vector2( 236, 148 )
texture = ExtResource( 5 )
vframes = 4
hframes = 3
frame = 11
[connection signal="area_entered" from="." to="." method="_on_Boss_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
